added the Room Management and Menu management

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,13 +6,16 @@ PORT=3000
 APP_NAME="Mayfair Hotel Management System"
 APP_VERSION=1.0.0
 
-# Database Configuration
-DB_HOST=localhost
+# Database Configuration - Supabase
+DB_HOST=aws-1-ap-southeast-1.pooler.supabase.com
 DB_PORT=5432
-DB_NAME=mayfair_hotel_db
-DB_USER=mayfair_user
-DB_PASSWORD=mayfair_password123
-DB_SSL=false
+DB_NAME=postgres
+DB_USER=postgres.aglpkgpajcgjdlfunwyr
+DB_PASSWORD=YOUR_SUPABASE_PASSWORD
+DB_SSL=true
+
+# Alternative: Use DATABASE_URL for Supabase
+DATABASE_URL=postgresql://postgres.aglpkgpajcgjdlfunwyr:YOUR_SUPABASE_PASSWORD@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
 
 # Redis Configuration
 REDIS_HOST=localhost
