--- a/backend/package.json
+++ b/backend/package.json
@@ -29,64 +29,65 @@
   "author": "Mayfair Hotel Development Team",
   "license": "PROPRIETARY",
   "dependencies": {
+    "agenda": "^5.0.0",
+    "aws-sdk": "^2.1450.0",
+    "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.0.1",
+    "express-winston": "^4.2.0",
+    "fast-csv": "^4.3.6",
     "helmet": "^7.0.0",
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "ioredis": "^5.3.2",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^2.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.4",
+    "objection": "^3.1.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "knex": "^2.5.1",
+    "pdfkit": "^0.13.0",
     "pg": "^8.11.3",
-    "redis": "^4.6.8",
-    "ioredis": "^5.3.2",
-    "joi": "^17.9.2",
-    "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.5",
-    "aws-sdk": "^2.1450.0",
-    "stripe": "^13.6.0",
+    "qrcode": "^1.5.3",
     "razorpay": "^2.9.2",
-    "twilio": "^4.15.0",
-    "nodemailer": "^6.9.4",
+    "redis": "^4.6.8",
+    "sharp": "^0.32.5",
     "socket.io": "^4.7.2",
-    "agenda": "^5.0.0",
-    "node-cron": "^3.0.2",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
-    "uuid": "^9.0.0",
-    "lodash": "^4.17.21",
-    "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "express-winston": "^4.2.0",
+    "stripe": "^13.6.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "xml2js": "^0.6.2",
-    "fast-csv": "^4.3.6",
-    "pdf-kit": "^0.13.0",
-    "qrcode": "^1.5.3",
-    "axios": "^1.5.0",
-    "cheerio": "^1.0.0-rc.12"
+    "twilio": "^4.15.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.4",
-    "supertest": "^6.3.3",
-    "eslint": "^8.47.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "prettier": "^3.0.2",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@babel/cli": "^7.22.10",
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
-    "@babel/cli": "^7.22.10",
-    "babel-jest": "^29.6.4"
+    "babel-jest": "^29.6.4",
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.2",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
