edit category fuction

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,11 +11,11 @@ DB_HOST=aws-1-ap-southeast-1.pooler.supabase.com
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres.aglpkgpajcgjdlfunwyr
-DB_PASSWORD=YOUR_SUPABASE_PASSWORD
+DB_PASSWORD=Aadya@2025
 DB_SSL=true
 
 # Alternative: Use DATABASE_URL for Supabase
-DATABASE_URL=postgresql://postgres.aglpkgpajcgjdlfunwyr:YOUR_SUPABASE_PASSWORD@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
+DATABASE_URL=postgresql://postgres.aglpkgpajcgjdlfunwyr:Aadya@2025@aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres
 
 # Redis Configuration
 REDIS_HOST=localhost
