--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
+    "cloudinary": "^1.41.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -52,6 +53,7 @@
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "objection": "^3.1.5",
