--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,6 @@
     "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
-    "clsx": "^2.0.0",
-    "date-fns": "^2.30.0",
-    "framer-motion": "^10.16.4",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "jwt-decode": "^3.1.2",
-    "postcss": "^8.4.29",
-    "autoprefixer": "^10.4.15",
-    "axios": "^1.5.0",
     "cloudinary": "^1.41.3",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -31,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.544.0",
     "multer-storage-cloudinary": "^4.0.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
