--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Backend API for Mayfair Hotel Management System",
   "main": "src/server.js",
   "scripts": {
+    "postinstall": "cd ../frontend && npm install && npm run build:production",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "jest",
