--- a/.github/workflows/deploy-vercel-direct.yml
+++ b/.github/workflows/deploy-vercel-direct.yml
@@ -50,6 +50,7 @@ jobs:
               '  "builds": [' \
               '    { "src": "backend/index.js", "use": "@vercel/node", "config": { "maxLambdaSize": "50mb" } }' \
               '  ],' \
+              '  "functions": { "backend/index.js": { "includeFiles": "frontend/build/**" } },' \
               '  "routes": [' \
               '    { "src": "/api/(.*)", "dest": "backend/index.js" },' \
               '    { "src": "/(.*)", "dest": "backend/index.js" }' \
