workflow verification step

--- a/.github/workflows/deploy-any-branch.yml
+++ b/.github/workflows/deploy-any-branch.yml
@@ -1,6 +1,6 @@
 name: Deploy to DEV & PROD
 
-run-name: "Deploy • ${{ github.event.inputs.deploy_preview == 'true' && github.event.inputs.deploy_production == 'true' && 'dev & prod' || github.event.inputs.deploy_preview == 'true' && 'dev' || github.event.inputs.deploy_production == 'true' && 'prod' || 'no env selected' }} • ${{ github.event.inputs.branch || github.ref_name }}"
+run-name: "Deploy • ${{ github.event.inputs.deploy_dev == 'true' && github.event.inputs.deploy_production == 'true' && 'dev & prod' || github.event.inputs.deploy_dev == 'true' && 'dev' || github.event.inputs.deploy_production == 'true' && 'prod' || 'no env selected' }} • ${{ github.event.inputs.branch || github.ref_name }}"
 
 # This workflow can deploy ANY branch to BOTH environments simultaneously!
 # Dev: dev.mayfairmandi.com | Production: prod.mayfairmandi.com
@@ -429,7 +429,7 @@ jobs:
           path: target-branch
 
   deploy-dev:
-    needs: prepare
+    needs: [validate, prepare]
     if: ${{ github.event.inputs.deploy_dev == 'true' }}
     runs-on: ubuntu-latest
     concurrency:
@@ -492,7 +492,7 @@ jobs:
           echo "- **Timestamp:** $(date -u +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
 
   deploy-production:
-    needs: prepare
+    needs: [validate, prepare]
     if: ${{ github.event.inputs.deploy_production == 'true' }}
     runs-on: ubuntu-latest
     concurrency:
