--- a/.github/workflows/sync-aiven-db-with-supabase.yml
+++ b/.github/workflows/sync-aiven-db-with-supabase.yml
@@ -31,13 +31,21 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: 🔧 Install PostgreSQL client
+      - name: 🔧 Install PostgreSQL 17 client
         run: |
-          echo "📦 Installing PostgreSQL client tools..."
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client
+          echo "📦 Installing PostgreSQL 17 client tools..."
           
-          echo "✅ PostgreSQL client installed"
+          # Add PostgreSQL official APT repository
+          sudo apt-get update
+          sudo apt-get install -y wget ca-certificates
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" | sudo tee /etc/apt/sources.list.d/pgdg.list
+          
+          # Update package list and install PostgreSQL 17 client
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client-17
+          
+          echo "✅ PostgreSQL 17 client installed"
           psql --version
 
       - name: 🔄 Sync Database (Supabase → Aiven)
