--- a/.github/workflows/sync-aiven-db-with-supabase.yml
+++ b/.github/workflows/sync-aiven-db-with-supabase.yml
@@ -170,10 +170,30 @@ jobs:
           # Supabase stats
           echo "📤 Supabase (Source) Statistics:"
           export PGPASSWORD="${{ secrets.SUPABASE_DB_PASSWORD }}"
+          
+          # Get basic database info first
+          echo "🔍 Database connection and basic info:"
+          psql -h aws-1-ap-southeast-1.pooler.supabase.com -p 6543 -U postgres.aglpkgpajcgjdlfunwyr -d postgres -c "SELECT version();" || echo "Could not get version info"
+          
+          # Get table count from information_schema (more reliable)
+          echo "📊 Table statistics:"
+          psql -h aws-1-ap-southeast-1.pooler.supabase.com -p 6543 -U postgres.aglpkgpajcgjdlfunwyr -d postgres -c "
+            SELECT 
+              table_schema,
+              table_name,
+              table_type
+            FROM information_schema.tables 
+            WHERE table_schema NOT IN ('information_schema', 'pg_catalog', 'pg_toast')
+            ORDER BY table_schema, table_name
+            LIMIT 20;
+          " || echo "Could not get table information"
+          
+          # Try to get user table stats if available
+          echo "📈 User table statistics (if available):"
           psql -h aws-1-ap-southeast-1.pooler.supabase.com -p 6543 -U postgres.aglpkgpajcgjdlfunwyr -d postgres -c "
             SELECT 
               schemaname,
-              tablename,
+              relname as table_name,
               n_tup_ins as inserts,
               n_tup_upd as updates,
               n_tup_del as deletes,
@@ -181,14 +201,34 @@ jobs:
             FROM pg_stat_user_tables 
             ORDER BY n_live_tup DESC 
             LIMIT 10;
-          "
+          " || echo "No user table statistics available (database might be empty)"
           
-          # Aiven stats
+          echo ""
           echo "📥 Aiven (Destination) Statistics:"
+          
+          # Get basic database info first
+          echo "🔍 Database connection and basic info:"
+          psql "postgres://avnadmin:${{ secrets.AIVEN_DB_PASSWORD }}@mayfair-mailcow.k.aivencloud.com:19870/defaultdb?sslmode=require" -c "SELECT version();" || echo "Could not get version info"
+          
+          # Get table count from information_schema
+          echo "📊 Table statistics:"
+          psql "postgres://avnadmin:${{ secrets.AIVEN_DB_PASSWORD }}@mayfair-mailcow.k.aivencloud.com:19870/defaultdb?sslmode=require" -c "
+            SELECT 
+              table_schema,
+              table_name,
+              table_type
+            FROM information_schema.tables 
+            WHERE table_schema NOT IN ('information_schema', 'pg_catalog', 'pg_toast')
+            ORDER BY table_schema, table_name
+            LIMIT 20;
+          " || echo "Could not get table information"
+          
+          # Try to get user table stats if available
+          echo "📈 User table statistics (if available):"
           psql "postgres://avnadmin:${{ secrets.AIVEN_DB_PASSWORD }}@mayfair-mailcow.k.aivencloud.com:19870/defaultdb?sslmode=require" -c "
             SELECT 
               schemaname,
-              tablename,
+              relname as table_name,
               n_tup_ins as inserts,
               n_tup_upd as updates,
               n_tup_del as deletes,
@@ -196,7 +236,7 @@ jobs:
             FROM pg_stat_user_tables 
             ORDER BY n_live_tup DESC 
             LIMIT 10;
-          "
+          " || echo "No user table statistics available (database might be empty)"
         env:
           PGPASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
 
